--- a/.github/workflows/feature-cicd.yml
+++ b/.github/workflows/feature-cicd.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.10", "3.11", "3.12"]
     steps:
       - name: Check out repo
         uses: actions/checkout@v4
